# OpenRDX

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_and_publish_images.sh  compose.sh  docker-compose.yml
core/: .env-example  Cargo.toml  Dockerfile  docker-entrypoint.sh  test_pap_radius.sh  test_radius.sh  test_radius_acct.sh
core/.sqlx/: query-03be34612ae157680d7d75ca5e3c212f192cf336e5fccf06ba445ca20835cd8f.json  query-3486677aa536f2f031783a59631e6a65fdb119666185463857ced9c45ac17d46.json  query-df332461e650529f508db3990b9f1e59e324b9b89bc16a1950b92441d06a060f.json
core/dicts/: default
core/src/: main.rs
core/src/accounting/: mod.rs  models.rs
core/src/auth/: config.rs  mod.rs  models.rs  radius_server.rs
core/tests/: test_chap_radius.sh  test_mschap_radius.sh
docs/: CNAME  components.md  contributing.md  features.md  getting-started.md  index.md  mschapv2-missing-features.md  radius-server.md  services.md  testing.md
docs/diagrams/: README.md  authentication-protocols.puml  component-interaction.puml  database-schema.puml  deployment-architecture.puml  northbound-api-architecture.puml  northbound-api-authentication-flow.puml  northbound-api-endpoints.puml  radius-authentication-flow.puml  system-architecture.puml
k8s/: acct-core-deployment.yaml  auth-core-deployment.yaml  backend-deployment.yaml  core-deployment.yaml  database-deployment.yaml  frontend-deployment.yaml  ingress.yaml  nginx-proxy-deployment.yaml  radec-proxy-deployment.yaml
nginx/: Dockerfile  entrypoint.sh  nginx.conf
nginx/conf.d/: default.conf
nginx/ssl/: cert.pem  key.pem
northbound_api/: .gitignore  Cargo.toml  Dockerfile  README.md
northbound_api/config/: config.toml
northbound_api/src/: auth.rs  error.rs  handlers.rs  main.rs  models.rs  openapi.rs
northbound_api/src/db/: mod.rs  queries.rs
oss_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  requirements.txt
oss_backend/accounting/: apps.py  models.py  serializers.py  urls.py  views.py
oss_backend/admin_users/: admin.py  apps.py  backends.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
oss_backend/admin_users/migrations/: 0001_initial.py  0002_create_default_admin_group_and_user.py  0003_alter_adminuser_email.py  0004_adminuser_admin_email_idx.py
oss_backend/api_keys/: apps.py  models.py  serializers.py  urls.py  views.py
oss_backend/api_keys/migrations/: 0001_initial.py
oss_backend/authentication/: models.py  serializers.py  urls.py  views.py
oss_backend/core/: settings.py  urls.py
oss_backend/nas/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
oss_backend/nas/migrations/: 0001_initial.py  0002_create_default_nas_groups_and_vendors.py  0003_add_secret_to_nas.py  0004_nas_timezone.py  0005_remove_nas_secret.py  0006_nas_nas_vendor_idx_nas_nas_ip_idx_and_more.py  0007_add_secret_to_nas.py  0009_add_nas_identifier.py  (+1 more)
oss_backend/radius/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
oss_backend/radsec/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
oss_backend/settings_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
oss_backend/shared/: apps.py  models.py  serializers.py  urls.py  views.py
oss_backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
oss_frontend/: .dockerignore  Dockerfile  README.md  angular.json  env.sh  nginx.conf  package-lock.json  package.json  webpack.config.js
oss_frontend/src/: index.html  styles.scss  typing.d.ts
radsec_proxy/: .env-example  Cargo.toml  Dockerfile  docker-entrypoint.sh  generate_test_certs.sh
radsec_proxy/src/: main.rs  radius.rs
scripts/: generate-ssl.sh
(+210 files in other folders)
