[package]
name = "radius-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "ipnetwork"] }
redis = { version = "0.31.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipnetwork = "0.20"
async-trait = "0.1"
futures = "0.3"
md4 = "0.10"
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
mongodb = "3.2.3"  # You can use the latest stable version
dotenv = "0.15"
tempfile = "3.20.0"
log = "0.4.27"
async-std = "1.13.1"
simple_logger = "5.0.0"
chrono = { version = "0.4", features = ["serde"] }
