[package]
name = "OpenRDX-Core"
version = "0.1.0"
edition = "2024"
authors = ["Alexey Ilinskiy <alexey@openrdx.org>"]
license = "MIT OR Apache-2.0"
description = "OpenRDX RADIUS server implementation in Rust"
repository = "https://github.com/ilinaya/openrdx"
homepage = "https://openrdx.org"
keywords = ["radius", "authentication", "networking"]
categories = ["authentication", "network-programming"]


[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "ipnetwork"] }
redis = { version = "0.31.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipnetwork = "0.21.1"
md4 = "0.10"
sha1 = "0.10.6"
mongodb = "3.2.3"  # You can use the latest stable version
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }

md-5 = "0.10.6"
hmac = "0.12.1"
digest = "0.10.7"
des = "0.8"
generic-array = "0.14"
rustls-pemfile = "1.0.4"
tokio-rustls = "0.24.1"
rustls = "0.21.12"
hex = "0.4.3"
log = "0.4.27"
rand = "0.8.5"


