[package]
name = "northbound-api"
version = "0.1.0"
edition = "2024"
authors = ["ILINAIA Team"]
description = "Northbound API for OpenRDX - REST API for programmatic access"
license = "MIT"

[dependencies]
actix-web = "4.5"
actix-rt = "2.11"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde", "clock"] }
env_logger = "0.11"
log = "0.4"
config = "0.14"
anyhow = "1.0"
thiserror = "1.0"
deadpool-postgres = "0.11"
tokio-postgres = "0.7"
futures = "0.3"
validator = { version = "0.18", features = ["derive"] }
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web", "debug-embed"] }

